# WuWa_Inventory_Kamera

./: .gitignore  .gitmodules  ARCHITECTURE_V2.md  LEGACY_CLEANUP_PLAN.md  LocalizationDataPlan.md  OCR_PREPROCESSING_PLAN.md  PIPELINE_MAINTAINABILITY.md  PIPELINE_MAINTAINABILITY_STATUS.md  README.md  REFACTORING_PLAN.md  TODO.md  app.py  batch_ocr.py  build.py  build_script.py  conftest.py  inspect_pixels.py  main.py  normalized_anchor.md  overview.md  pixel_count.py  pyproject.toml  reprocess.py  requirements.txt  update_data.py  validation.md
.github/: copilot-instructions.md  python-rules.instructions.md
cli/: calibrate_ocr.py  compare_ocr.py  debug_ocr.py  reprocess.py  tune_region_spec.py  update_data.py
config/: ocr_region_specs.toml
docs/: ARCHITECTURE_V2.md  CV2_REPLACEMENT_ANALYSIS.md  GAME_ASSET_UPDATER_PLAN.md  GRANDFATHER_MASTER_ASSETS.md  IMGIO_MODULE_PLAN.md  IMGIO_PROGRESS_2026-06-02.md  INVENTORY_VIEWER_PLAN.md  LEGACY_CLEANUP_PLAN.md  LocalizationDataPlan.md  OCR_PREPROCESSING_PLAN.md  OCR_PRESERVING_FEATURES.md  OUTPUT_SCHEMA_V1.md  OUTPUT_SCHEMA_V1_1.md  OUTPUT_SCHEMA_V1_COMPAT_PLAN.md  PIPELINE_MAINTAINABILITY.md  PIPELINE_MAINTAINABILITY_STATUS.md  RAPIDOCR_COLOR_PREPROCESSING_MIGRATION.md  REFACTORING_PLAN.md  RELEASE_NOTES_v2.0.0b1.md  WINDOWED_MODE_FEASIBILITY.md  overview.md
game/: foreground.py  menu.py
nav-scripts/: build-sonata-templates-from-filter.py  build-sonata-templates.py  scan-echoes.py  scan-sonata-icons.py  test-echo-workflow.py
properties/: app_config.py  config.py
scraping/: achievementsScraper.py  charactersScraper.py  data.py  echoesScraper.py  itemsScraper.py  scraperManager.py  weaponsScraper.py
scraping/models/: __init__.py  rawScan.py
scraping/ocr/: __init__.py  _rapidocr.py  _tesserocr.py  _types.py
scraping/processing/: __init__.py  echo_stats_valid_values.yaml  echoesProcessor.py  echoesValidator.py  statsExtractor.py
scraping/scanning/: __init__.py  echo.py  echoesScanner.py
scraping/utils/: __init__.py  common.py
session_tests/: conftest.py  test_sonata_icon_matching.py  test_stats_extractors.py
src/wuwa_inventory_kamera/: __init__.py  app.py  localization_data.py  output_serialization.py
src/wuwa_inventory_kamera/cli/: detect_sonata_icon.py  exporter.py  match_sonata_icon.py  nav.py  reprocess.py  scan.py  update_assets.py
src/wuwa_inventory_kamera/config/: __init__.py  app_config.py  ocr_region_specs.toml
src/wuwa_inventory_kamera/exporter/: __init__.py  wutheringtools.py
src/wuwa_inventory_kamera/game/: __init__.py  constants.py  game_roi.py  input_controller.py  navigation.py  screen.py  screen_info.py  state.py  stop_signal.py
src/wuwa_inventory_kamera/game/utils/: geometry.py
src/wuwa_inventory_kamera/imgio/: __init__.py  api.py  capabilities.py  enums.py  errors.py  registry.py  types.py
src/wuwa_inventory_kamera/imgio/backends/: __init__.py  cv2_backend.py  pillow_backend.py  skimage_backend.py
src/wuwa_inventory_kamera/scraping/: data.py
src/wuwa_inventory_kamera/scraping/matching/: sonata_icon.py
src/wuwa_inventory_kamera/scraping/models/: __init__.py  raw_scan.py
src/wuwa_inventory_kamera/scraping/ocr/: __init__.py  _rapidocr.py  _types.py  batch.py  region_specs.py
src/wuwa_inventory_kamera/scraping/processing/: echoesValidator.py  echoes_processor.py  stats_extractor.py
src/wuwa_inventory_kamera/scraping/scanning/: __init__.py  achievement_workflow.py  character_workflow.py  echo_workflow.py  grid_navigator.py  item_workflow.py  scan_state.py  session_orchestrator.py  shell_workflow.py  weapon_workflow.py
src/wuwa_inventory_kamera/scraping/service/: captures.py  character_reprocess.py  echo_capture_utils.py  echo_ocr_cache.py  echo_reprocess.py  echo_validation.py  item_reprocess.py  item_result_normalization.py  ocr_cache.py  ocr_service.py  shared_scan_helpers.py  weapon_reprocess.py
src/wuwa_inventory_kamera/scraping/service/assemblers/: _equipped.py  achievement_assembler.py  character_assembler.py  echo_assembler.py  item_assembler.py  shell_assembler.py  weapon_assembler.py
src/wuwa_inventory_kamera/scraping/utils/: common.py
src/wuwa_inventory_kamera/ui/: __init__.py  config.py  export.py  home.py  inventory.py  inventory_models.py  loading.py  main_window.py  settings.py
src/wuwa_inventory_kamera/ui/custom_widgets/: __init__.py  widget.py
src/wuwa_inventory_kamera/updater/: assets.py  database.py
tests/: test_assets_updater.py  test_character_assembler.py  test_character_reprocess.py  test_cli_supported_invocation.py  test_database_updater.py  test_echo_name_guard.py  test_echo_ocr_cache.py  test_echo_reprocess.py  test_echo_workflow.py  test_echoesValidator.py  test_equipped_output.py  test_exporter_cli.py  test_game_window.py  test_grid_navigator.py  test_home_ui.py  test_imgio_api.py  test_imgio_pillow_backend.py  test_inventory_models.py  test_inventory_ui.py  test_item_reprocess.py  test_item_result_normalization.py  test_loading_ui.py  test_nav_repl.py  test_nav_screenshot.py  test_navigation_localization.py  test_ocrStats.py  test_ocrSubstatNames.py  test_ocr_preprocessing.py  test_ocr_service.py  test_output_serialization.py  test_raw_scan_loading.py  test_reprocess_cli.py  test_scan_debug_workflows.py  test_scraping_data_generated_fallback.py  test_screen_info.py  test_sonata_key_loading.py  test_statsExtractors.py  test_tune_region_spec_cli.py  test_update_assets_cli.py  test_weapon_reprocess.py
tests/data/: test_ocrStats.yaml
tools/: check_cv2_imports.py  match_sonata_icon.py  prune_cx_freeze_build.py
tools/check_printwindow/: main.py
tools/cli/dimbreath_wuthering_data/: api_calls.py  local.py
tools/match_sonata_icon/: main.py  sonata_icon_resolutions.json
tools/scrape_sonata_icons/: main.py
tools/update_sonata_templates/: main.py
ui/: homeUI.py  inventoryUI.py  loadingUI.py  mainUI.py  settingsUI.py
ui/custom_widgets/: __init__.py
updater/: assetsUpdater.py  databaseUpdater.py
