[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wuwa-inventory-kamera"
version = "2.0.0.dev0"
description = "WuWa Inventory Kamera — GPU-accelerated inventory scanner v2"
requires-python = ">=3.11"
readme = "README.md"
license = { file = "LICENSE" }

dependencies = [
    "numpy",
    "opencv-python",
    "rapidocr-onnxruntime",
    "PyYAML",
    "onnxruntime-directml",
    "babel",
    "onnxruntime-directml; sys_platform == 'win32'",
]

[project.optional-dependencies]
# Full application (UI + game capture)
app = [
    "PySide6-Fluent-Widgets>=1.8.7",
    "mss>=10.1.0",
    "PyWinCtl>=0.4.1",
    "PyMonCtl>=0.92",
    "pyreadline3>=3.4",
]
# Build / packaging
build = [
    "cx_freeze>=8.4.1",
]
dev = [
    "pytest",
    "pytest-cov",
]

[project.scripts]
wuwa-reprocess = "wuwa_inventory_kamera.cli.reprocess:main"
wuwa-scan      = "wuwa_inventory_kamera.cli.scan:main"
wuwa-nav       = "wuwa_inventory_kamera.cli.nav:main"
wuwa-app       = "wuwa_inventory_kamera.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/wuwa_inventory_kamera"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv]
environments = ["sys_platform == 'linux'", "sys_platform == 'win32'"]

# rapidocr-onnxruntime transitively requires plain `onnxruntime`, but we use
# onnxruntime-directml (which provides the same runtime + DirectML EP on Windows).
# This override marks plain onnxruntime as only needed on sys_platform=='never',
# so uv never installs it and onnxruntime-directml remains the sole provider.
override-dependencies = [
    "onnxruntime-directml; sys_platform != 'win32' and sys_platform == 'never'",
    "onnxruntime; sys_platform == 'win32' and sys_platform == 'never'",
]
