[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wuwa-inventory-kamera"
version = "2.0.0b1"
description = "WuWa Inventory Kamera — GPU-accelerated inventory scanner v2"
requires-python = ">=3.11"
readme = "README.md"
license = { file = "LICENSE" }

dependencies = [
    "numpy",
    "opencv-python",
    "prompt_toolkit>=3.0; sys_platform == 'win32'",
    "rapidocr-onnxruntime",
    "PyYAML",
    "babel",
    "onnxruntime-directml; sys_platform == 'win32'",
    "onnxruntime; sys_platform != 'win32'",
]

[project.optional-dependencies]
# Full application (UI + game capture)
app = [
    "PySide6-Fluent-Widgets>=1.8.7",
    "mss>=10.1.0",
    "PyWinCtl>=0.4.1",
    "PyMonCtl>=0.92",
    "pyreadline3>=3.4",
]
# Build / packaging
build = [
    "cx_freeze>=8.4.1",
]
dev = [
    "pytest",
    "pytest-cov",
]

[project.scripts]
wuwa-reprocess = "wuwa_inventory_kamera.cli.reprocess:main"
wuwa-scan      = "wuwa_inventory_kamera.cli.scan:main"
wuwa-nav       = "wuwa_inventory_kamera.cli.nav:main"
wuwa-assets    = "wuwa_inventory_kamera.cli.update_assets:main"
wuwa-exporter  = "wuwa_inventory_kamera.cli.exporter:main"
wuwa-app       = "wuwa_inventory_kamera.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/wuwa_inventory_kamera"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv]
environments = ["sys_platform == 'linux'", "sys_platform == 'win32'"]

# rapidocr-onnxruntime transitively requires plain `onnxruntime`, but we use
# onnxruntime-directml (which provides the same runtime + DirectML EP on Windows).
# This override marks plain onnxruntime as only needed on sys_platform=='never',
# so uv never installs it and onnxruntime-directml remains the sole provider.
override-dependencies = [
    "onnxruntime-directml; sys_platform == 'win32'",
    "onnxruntime; sys_platform != 'win32'",
]

[tool.cxfreeze]
executables = [
    { script = "main.py", target_name = "wuwa-app" }
]

[tool.wuwa_inventory_kamera.freeze]
script = "main.py"
gui_base = true
include_msvcr = true
build_root = "build/cx_freeze"
env_root = ".build/cx_freeze/envs"
common_packages = [
    #"PySide6",
    "cv2",
    "mss",
    "numpy",
    "onnxruntime",
    "pywinctl",
    "qfluentwidgets",
    "rapidocr_onnxruntime",
    "wuwa_inventory_kamera",
    "yaml",
]
#include_files = ["assets", "config", "data"]
create_directories = ["export", "logs", "assets", "config", "data"]
zip_exclude_packages = ["rapidocr_onnxruntime", "wuwa_inventory_kamera"]
package_files = [
    { source = "src/wuwa_inventory_kamera/config/ocr_region_specs.toml", target = "lib/wuwa_inventory_kamera/config/ocr_region_specs.toml" },
    { source = "src/wuwa_inventory_kamera/scraping/processing/echo_stats_valid_values.yaml", target = "lib/wuwa_inventory_kamera/scraping/processing/echo_stats_valid_values.yaml" },
]

[tool.wuwa_inventory_kamera.freeze.backends.cpu]
distribution = "onnxruntime"
target_name = "wuwa-app-cpu"
providers = ["CPUExecutionProvider"]

[tool.wuwa_inventory_kamera.freeze.backends.directml]
distribution = "onnxruntime-directml"
target_name = "wuwa-app-directml"
providers = ["DmlExecutionProvider", "CPUExecutionProvider"]

[tool.wuwa_inventory_kamera.freeze.backends.cuda]
distribution = "onnxruntime-gpu"
target_name = "wuwa-app-cuda"
providers = ["CUDAExecutionProvider", "CPUExecutionProvider"]
